# university

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle
binder/: environment.yml  requirements.txt
cs01/: 10.1.c  11.1.c  11.3.c  12.1.c  12.2.c  12.3.c  12.5.c  13.c  14.3.c  18.c  23.c  3.2.c  5.3.c  5.9.c  7.5.c  7.6.c  8.3.c  8.5.c  9.4.c  CMakeLists.txt  cs01.cbp  cs01.depend  cs01.layout
cs01/10.1/: number_analysis.c
cs01/10.2/: function_analysis.c
cs01/11.1/: digital_root.h
cs01/11.3/: print_in_base.c
cs01/12.1/: array_io.c  array_io.h
cs01/12.2/: array_analysis.c  array_analysis.h
cs01/12.3/: odd_even.c  odd_even.h
cs01/12.5/: find_max_row.c  find_max_row.h
cs01/13/: integrate.c  integrate.h
cs01/14.3/: binary_operations.c
cs01/17/: stringUtils.c
cs01/18/: splitString.c  splitString.h
cs01/23/: matrix.c  matrix.h  matrix_io.c  matrix_io.h  matrix_operations.c  matrix_operations.h
cs01/progress_test_1/One/: One.cbp  main.c  scan_and_find_average.c  scan_and_find_average.h
cs01/progress_test_1/Three/: main.c  point_analysis.h
cs01/progress_test_1/Two/: hypercosine.c  hypercosine.h  main.c
cs01/progress_test_2/One/: One.cbp  chebyshev.c  chebyshev.h  main.c
cs01/progress_test_2/Two/: Two.cbp  find_extreme.c  find_extreme.h  main.c
cs01/progress_test_3/One/: main.c
cs01/progress_test_3/Three/: Three.cbp  find_kth_word.c  main.c
cs01/progress_test_3/Two/: Two.cbp  find_smallest.c  find_smallest.h  main.c
cs01/progress_test_3/Two_fixed/: checkProperties.c  checkProperties.h  main.c
cs01/progress_test_4/One/: One.cbp  longest_vector.c  main.c
cs01/progress_test_4/Three/: Three.cbp  fileUtils.c  fileUtils.h  input.txt  main.c
cs01/progress_test_4/Three_fixed/: fileUtils.c  main.c
cs01_labs/: 3.2.c  3.4.c  5.3.c  5.5.c  CMakeLists.txt
cs02/: README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
year-1/introduction-to-c/: 10.2.c  12.1.c  12.5.c  13.c  17.c  23.c  3.4.c  5.3.c  5.5.c  7.1.c  7.5.c  8.1.c  8.2.c  CMakeLists.txt
year-1/introduction-to-c/10.1/: number_analysis.h
year-1/introduction-to-c/10.2/: function_analysis.h
year-1/introduction-to-c/11.1/: digital_root.c  gcd_lcm.c  gcd_lcm.h
year-1/introduction-to-c/11.3/: print_in_base.h
year-1/introduction-to-c/12.1/: array_io.c  array_io.h
year-2/computational-workshop/: README.md  environment.yml  requirements.txt  task-1.ipynb  task-2.ipynb  task-3.ipynb  task-4.ipynb  task-5.ipynb  task-6.ipynb  task-7.ipynb
year-3/introduction-to-cpp/: CMakeLists.txt  task-1.cpp  task-2.cpp  task-3.cpp  task-3.h  task-4.cpp  task-5.cpp  task-6.cpp  task-7.cpp
year-3/introduction-to-cpp/graphics/: CMakeLists.txt  main.cpp  my_canvas.cpp  my_canvas.h
year-3/introduction-to-cpp/heraklio/: CMakeLists.txt  action.cpp  action.h  bot.cpp  bot.h  colors.cpp  colors.h  game.cpp  game.h  game_config.cpp  game_config.h  main.cpp  maze.cpp  maze.h  player.cpp  player.h  random_generator_provider.cpp  random_generator_provider.h
year-3/introduction-to-cpp/lessons/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mymodel.cpp  mymodel.h  myview.cpp  myview.h
year-3/introduction-to-cpp/shapes/: circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h
year-3/introduction-to-cpp/string/: string.cpp
year-3/introduction-to-cpp/todennakoisyys/: CMakeLists.txt  Doxyfile  chensamplegenerator.cpp  chensamplegenerator.h  chisquarecriterion.cpp  chisquarecriterion.h  defaults.h  discretedistribution.cpp  discretedistribution.h  distribution.h  groupeddiscretedistribution.cpp  groupeddiscretedistribution.h  groupedpoint.cpp  groupedpoint.h  groupedsample.cpp  groupedsample.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h  random_generator_provider.cpp  random_generator_provider.h  resources.qrc  sample.cpp  sample.h  samplegenerator.cpp  samplegenerator.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tablesamplegenerator.cpp  tablesamplegenerator.h  todennakoisyys_ru_RU.ts
year-3/introduction-to-cpp/todennakoisyys/doxygen/html/: annotated.html  chensamplegenerator_8cpp.html  chensamplegenerator_8h.html  chensamplegenerator_8h_source.html  chisquarecriterion_8cpp.html  chisquarecriterion_8h.html  chisquarecriterion_8h_source.html  class_chen_sample_generator-members.html  class_chen_sample_generator.html  class_chi_square_criterion-members.html  class_chi_square_criterion.html  class_discrete_distribution-members.html  class_discrete_distribution.html  class_distribution-members.html  class_distribution.html  class_grouped_discrete_distribution-members.html  class_grouped_discrete_distribution.html  class_grouped_point-members.html  class_grouped_point.html  class_grouped_sample-members.html  class_grouped_sample.html  class_main_window-members.html  class_main_window.html  class_point-members.html  class_point.html  class_random_generator_provider-members.html  class_random_generator_provider.html  class_sample-members.html  class_sample.html  class_sample_generator-members.html  class_sample_generator.html  class_settings_dialog-members.html  class_settings_dialog.html  class_table_sample_generator-members.html  class_table_sample_generator.html  classes.html  defaults_8h.html  defaults_8h_source.html  discretedistribution_8cpp.html  discretedistribution_8h.html  (+45 more)
year-3/introduction-to-cpp/todennakoisyys/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  search.css  searchdata.js  variables_0.js  variables_1.js
year-3/introduction-to-r/: graphs.r  task-1.R  task-1.ipynb  task-2.R  task-3-part-2.ipynb  task-3.ipynb  task-4-py.ipynb  task-4.ipynb
(+61 files in other folders)
