cmake_minimum_required(VERSION 3.0)
project(cs01)

add_executable(3.2 3.2.c)
add_executable(3.4 3.4.c)
add_executable(5.3 5.3.c)
add_executable(5.5 5.5.c)
add_executable(5.9 5.9.c)
add_executable(7.1 7.1.c)
add_executable(7.5 7.5.c)
add_executable(8.1 8.1.c)
add_executable(8.2 8.2.c)
add_executable(8.3 8.3.c)
add_executable(8.5 8.5.c)
add_executable(9.4 9.4.c)
add_executable(10.1 10.1.c 10.1/number_analysis.c)
add_executable(10.2 10.2.c 10.2/function_analysis.c)
add_executable(11.1 11.1.c 11.1/digital_root.c 11.1/gcd_lcm.c)
add_executable(11.3 11.3.c 11.3/print_in_base.c)
add_executable(12.1 12.1.c 12.1/array_io.c)
add_executable(12.2 12.2.c 12.2/array_analysis.c 12.1/array_io.c)
add_executable(12.3 12.3.c 12.3/odd_even.c 12.1/array_io.c)
add_executable(12.5 12.5.c 12.5/find_max_row.c 12.1/array_io.c)
add_executable(13 13.c 13/integrate.c)
add_executable(14.3 14.3.c 14.3/binary_operations.c 12.1/array_io.c)

target_link_libraries(5.9 m)
target_link_libraries(9.4 m)
target_link_libraries(10.1 m)
target_link_libraries(10.2 m)
target_link_libraries(13 m)
